@@ -6,6 +6,7 @@ CHANGELOG
 -------------------
 
 * Fix stake by id (level) (fixes #835)
+* Rename stake to maintenance stake (fixes #834)
 
 0.20.3 (2013-09-30)
 -------------------
